--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,9 @@ end_of_line = lf
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+
+[*.cpp]
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 4
